--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             align-items: center;
         }
         .variants {
-            display: none; /* Caché par défaut */
+            display: none;
             margin-top: 10px;
             padding-left: 10px;
             background-color: #f9f9f9;
@@ -69,16 +69,8 @@
             border: none;
             cursor: pointer;
         }
-        .toggleVariants {
-            background-color: #00d084;
-            color: white;
-        }
-        .modifyItem {
+        .modifyOrDelete {
             background-color: #ffa500;
-            color: white;
-        }
-        .deleteItem {
-            background-color: #ff4d4d;
             color: white;
         }
         #addSection button {
@@ -94,6 +86,34 @@
         }
         #addSection button:hover {
             background: linear-gradient(135deg, #00a76d, #00b3a3);
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+        }
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            width: 300px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .modal button {
+            margin-top: 10px;
+            background-color: #ff4d4d;
+            color: white;
+        }
+        .modal button:hover {
+            background-color: #e55;
         }
     </style>
 </head>
@@ -113,6 +133,15 @@
         <button id="addButton">Ajouter</button>
     </div>
 
+    <!-- Fenêtre modale pour confirmation de suppression -->
+    <div id="deleteModal" class="modal">
+        <div class="modal-content">
+            <h3>Êtes-vous sûr de vouloir supprimer cet article ?</h3>
+            <button id="confirmDelete">Confirmer</button>
+            <button id="cancelDelete">Annuler</button>
+        </div>
+    </div>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             let inventoryItems = [];
@@ -121,6 +150,11 @@
             const addVariantButton = document.getElementById("addVariantButton");
             const variantsList = document.getElementById("variantsList");
             const addButton = document.getElementById("addButton");
+
+            let itemToDelete = null; // Stocke l'ID de l'article à supprimer
+            const deleteModal = document.getElementById("deleteModal");
+            const confirmDeleteButton = document.getElementById("confirmDelete");
+            const cancelDeleteButton = document.getElementById("cancelDelete");
 
             // Ajout d'une variante
             addVariantButton.addEventListener("click", () => {
@@ -144,7 +178,7 @@
 
                 const variants = Array.from(variantsList.children).map(variantDiv => {
                     const variantName = variantDiv.querySelector(".variantName").value.trim();
-                    const variantQuantity = parseInt(variantDiv.querySelector(".variantQuantity").value.trim(), 10);
+                    const variantQuantity = parseInt(variantDiv.querySelector(".variantQuantity").value.trim(), 10) || 0;
                     return { name: variantName, quantity: variantQuantity };
                 });
 
@@ -172,8 +206,7 @@
                     itemHeader.classList.add("item-header");
                     itemHeader.innerHTML = `
                         <span>${item.name}</span>
-                        <button class="modifyItem">Modifier</button>
-                        <button class="deleteItem">Supprimer</button>`;
+                        <button class="modifyOrDelete">Modifier / Supprimer</button>`;
                     itemDiv.appendChild(itemHeader);
 
                     // Variantes
@@ -186,7 +219,6 @@
                         variantDiv.innerHTML = `
                             <span>${variant.name}</span>
                             <input type="number" value="${variant.quantity}" class="quantity">
-                            <button onclick="removeVariant('${item.id}', '${variant.name}')">Supprimer</button>
                         `;
                         variantsDiv.appendChild(variantDiv);
                     });
@@ -194,17 +226,19 @@
                     itemDiv.appendChild(variantsDiv);
                     inventoryDiv.appendChild(itemDiv);
 
-                    // Interactivité
-                    itemHeader.querySelector(".modifyItem").addEventListener("click", () => {
-                        modifyItem(item.id);
-                    });
-
-                    itemHeader.querySelector(".deleteItem").addEventListener("click", () => {
-                        deleteItem(item.id);
+                    // Interactivité pour modifier ou supprimer
+                    itemHeader.querySelector(".modifyOrDelete").addEventListener("click", () => {
+                        if (confirm("Voulez-vous modifier cet article ?")) {
+                            modifyItem(item.id);
+                        } else {
+                            itemToDelete = item.id;
+                            deleteModal.style.display = "flex";
+                        }
                     });
                 });
             }
 
+            // Modification d'un article
             function modifyItem(id) {
                 const item = inventoryItems.find(i => i.id === id);
                 if (!item) return;
@@ -225,17 +259,16 @@
                 renderInventory();
             }
 
-            function deleteItem(id) {
-                inventoryItems = inventoryItems.filter(i => i.id !== id);
+            // Suppression d'un article
+            confirmDeleteButton.addEventListener("click", () => {
+                inventoryItems = inventoryItems.filter(i => i.id !== itemToDelete);
+                deleteModal.style.display = "none";
                 renderInventory();
-            }
+            });
 
-            function removeVariant(itemId, variantName) {
-                const item = inventoryItems.find(i => i.id === itemId);
-                if (!item) return;
-                item.variants = item.variants.filter(v => v.name !== variantName);
-                renderInventory();
-            }
+            cancelDeleteButton.addEventListener("click", () => {
+                deleteModal.style.display = "none";
+            });
         });
     </script>
 </body>
